# space_station_drf

./: .coverage  .env  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
config/: settings.py  urls.py
space_station/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
space_station/migrations/: 0001_initial.py  0002_instructions_station.py
tests/: conftest.py
tests/api/: test_space_station.py
user/: serializers.py  urls.py  views.py
